# forgegov

./: CLAUDE.md  CONTROL_PLAN.md  QUALITY_AGENT.md  README.md  pyproject.toml
src/forgegov/: __init__.py  audits.py  cli.py  contracts.py  pipeline.py  registry.py
tests/: test_audits.py  test_cli.py  test_contracts.py  test_pipeline.py  test_registry.py
