[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgegov"
version = "0.1.0"
description = "Governance, contract enforcement, and CI/CD for the Forge ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Eric Wolters", email = "eric.wolters@svend.ai"},
]

dependencies = []

[project.optional-dependencies]
certify = ["forgedoc"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
forgegov = "forgegov.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99
